Correctly align settings, fixes #222

--- a/css/style.less
+++ b/css/style.less
@@ -1321,3 +1321,19 @@ div.percentdone{
 		min-height: 22px;
 	}
 }
+#app-settings-content {
+	li {
+		line-height: 3em;
+		&.headline{
+			font-weight: bold;
+			line-height: 1.5em;
+		}
+	}
+	.icon{
+		margin-top: -3px;
+	}
+	select {
+		float:right;
+		min-width:105px;
+	}
+}
